<?xml version="1.0" encoding="utf-8"?>

<!--
AccroDesTournois : list all the volleyball tournaments of the french
website Accro Des Tournois (http://www.accro-des-tournois.com)

Copyright (C) 2014  Henri Buyse

AccroDesTournois is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

AccroDesTournois is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with AccroDesTournois.  If not, see <http://www.gnu.org/licenses/>.
-->


<resources>

    <!-- Application Specificity -->
    <string name="app_name">Accro Des Tournois</string>
    <string name="website">http://www.accro-des-tournois.com</string>
    <string name="author">Created by Henri BUYSE</string>

    <!-- Tournament Activity -->
    <string name="tournamentDate">Tournament date</string>
    <string name="tournamentDetails">Tournament details</string>
    <string name="tournamentPlace">Tournament place</string>
    <string name="sizeDay">16</string>
    <string name="sizeMonth">Jun</string>
    <string name="surface">Surface</string>

    <!-- Menu Button -->
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="support">Support</string>

    <!-- ProgressDialog -->
    <string name="mainProgress">Retrieving the list of tournaments</string>
    <string name="loading">Loading…</string>
    <string name="tournamentProgress">Retrieving the tournament</string>

    <!-- Tournoi Fragment -->
    <string name="publisher">Tournament published by</string>
    <string name="additionalInfo">Additional informations</string>
    <string name="contact">Contact</string>

    <!-- Title Activity -->
    <string name="title_tournament_list">Accro Des Tournois</string>
    <string name="title_activity_main">SplashScreen</string>
    <string name="description_ic_launcher">Volley Ball</string>

    <!-- Contact activity -->
    <string name="dev_photo">Developer photo</string>
    <string name="dev_name">Henri BUYSE</string>
    <string name="dev_job">Developer of the application</string>
    <string name="dev_mail">henri.buyse@gmail.com</string>
    <string name="dev_mail_addr">mailto:henri.buyse@gmail.com</string>
    <string name="desc_dev_mail">Developer e-mail address</string>
    <string name="dev_github">hbuyse</string>
    <string name="desc_github_addr">Developer Github</string>
    <string name="dev_github_addr">https://github.com/hbuyse</string>
    <string name="desc_why">        If you have any issue with the app or you thought about an improvement.
        Please send me an email, I will see what I can do.\nYou can also follow my work on GitHub!</string>
    <string name="desc_adt">        Accro des tournois is the referencing website for french volleyball tournaments.
        Publish your tournaments, as an organizer or participant!</string>
    <string name="facebook_adt">Facebook</string>
    <string name="facebook_addr">fb://profile/187301651296069</string>
    <string name="facebook_addr2">https://facebook.com/AccroTournoisVB</string>
    <string name="twitter_adt">Twitter</string>
    <string name="twitter_addr">https://twitter.com/Accro_tournois</string>
    <string name="googleplus_adt">Google +</string>
    <string name="googleplus_addr">https://plus.google.com/</string>
    <string name="website_adt">Website</string>
    <string name="website_addr">http://www.accro-des-tournois.com</string>
    <string name="email_adt">E-mail</string>
    <string name="email_addr">mailto:?subject=Awesome ! Accro des tournois&amp;body=Look at
        this website : http://www.accro-des-tournois.com</string>
    <string name="licence">Open-sourced application under MIT License</string>

    <!-- Type of tournament -->
    <string name="news">NEW</string>
    <string name="full">FULL</string>
    <string name="beach">Beach</string>
    <string name="grass">Grass</string>
    <string name="indoor">Indoor</string>
    <string name="night">Nocturnal</string>

    <!-- Internet issues -->
    <string name="no_connection">You are not connected to Internet.\nPlease, try later.</string>
    <string name="timeout">Timeout</string>
    <string name="internet_pb">You encountered a problem durind the download.\nPlease, try later.</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!-- List of all the regions in France, the new tournaments and all Tournaments -->
    <string-array name="regions">
        <item>All</item>
        <item>New</item>
        <item>Alsace</item>
        <item>Aquitaine</item>
        <item>Auvergne</item>
        <item>Basse-Normandie</item>
        <item>Bourgogne</item>
        <item>Bretagne</item>
        <item>Centre</item>
        <item>Champagne-Ardenne</item>
        <item>Corse</item>
        <item>Franche-Comté</item>
        <item>Haute-Normandie</item>
        <item>Île-de-France</item>
        <item>Languedoc-Roussillon</item>
        <item>Limousin</item>
        <item>Lorraine</item>
        <item>Midi-Pyrénées</item>
        <item>Nord-Pas-de-Calais</item>
        <item>Pays de la Loire</item>
        <item>Picardie</item>
        <item>Poitou-Charentes</item>
        <item>Provence-Alpes-Côte d\'Azur</item>
        <item>Rhône-Alpes</item>
    </string-array>

    <string-array name="url_number">
        <item>index.html</item>
        <item>index.html</item>
        <item>index.html/7/alsace</item>
        <item>index.html/8/aquitaine</item>
        <item>index.html/9/auvergne</item>
        <item>index.html/12/basse-normandie</item>
        <item>index.html/10/bourgogne</item>
        <item>index.html/11/bretagne</item>
        <item>index.html/13/centre</item>
        <item>index.html/14/champagne-ardenne</item>
        <item>index.html/1/corse</item>
        <item>index.html/16/franche-comte</item>
        <item>index.html/15/haute-normandie</item>
        <item>index.html/17/ile-de-france</item>
        <item>index.html/4/languedoc-roussillon</item>
        <item>index.html/6/limousin</item>
        <item>index.html/18/lorraine</item>
        <item>index.html/5/midi-pyrenees</item>
        <item>index.html/19/nord-pas-de-calais</item>
        <item>index.html/20/pays-de-la-loire</item>
        <item>index.html/21/picardie</item>
        <item>index.html/22/poitou-charentes</item>
        <item>index.html/2/paca</item>
        <item>index.html/3/rhone-alpes</item>
    </string-array>

</resources>
