<!--
The MIT License (MIT)

Copyright (c) 2014 Henri Buyse

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_list"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.hbuyse.accrodestournois.Contact$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <!-- Dev presentation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="0.5"
                android:src="@drawable/henri"
                android:contentDescription="@string/dev_photo"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/dev_name"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/ruler" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/dev_job"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/desc_why"
                android:textSize="16sp"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <!-- Dev email -->
            <TableRow
                android:id="@+id/email_hb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_action_email"
                    android:contentDescription="@string/desc_dev_mail"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"

                    android:text="@string/dev_mail"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />
                </TableRow>

            <!-- Dev github -->
            <TableRow
                android:id="@+id/github_hb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/github"
                    android:contentDescription="@string/desc_github_addr" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="5dp"

                    android:text="@string/dev_github"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@android:color/white" />

            </TableRow>
        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/ruler" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:text="@string/desc_adt"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

           <ImageView
               android:id="@+id/facebook_adt"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"

               android:src="@drawable/facebook"
               android:contentDescription="@string/facebook_adt"
               android:clickable="true" />

            <ImageView
                android:id="@+id/twitter_adt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:src="@drawable/twitter"
                android:contentDescription="@string/twitter_adt"
                android:clickable="true" />

            <ImageView
                android:id="@+id/googleplus_adt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:src="@drawable/googleplus"
                android:contentDescription="@string/googleplus_adt"
                android:clickable="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/email_adt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:src="@drawable/ic_action_email"
                android:contentDescription="@string/email_adt"
                android:clickable="true" />

            <ImageView
                android:id="@+id/website_adt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:src="@drawable/ic_action_web_site"
                android:contentDescription="@string/website_adt"
                android:clickable="true" />


            </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/licence"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:singleLine="false" />

    </LinearLayout>
</ScrollView>