<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@drawable/item_shape"
    android:padding="4dip">

    <TextView
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toLeftOf="@id/day_month"
        android:gravity="center_vertical"
        android:text="@string/tournamentPlace"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/place"
        android:layout_toLeftOf="@id/day_month"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/tournamentDetails"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/day_month"
        android:layout_width="50dip"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/place"
        android:orientation="vertical">

        <TextView
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/month_shape"
            android:gravity="center"
            android:text="@string/sizeMonth"
            android:textColor="@color/font_month"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/day_shape"
            android:gravity="center"
            android:text="@string/sizeDay"
            android:textColor="@color/font_day"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout> 