<!--
AccroDesTournois : list all the volleyball tournaments of the french
website Accro Des Tournois (http://www.accro-des-tournois.com)

Copyright (C) 2014  Henri Buyse

AccroDesTournois is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

AccroDesTournois is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with AccroDesTournois.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkorange"
    tools:context="fr.hbuyse.accrodestournois.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/fullscreen_content"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:keepScreenOn="true"
            android:scaleType="fitCenter"
            android:src="@drawable/volley_ball"
            android:contentDescription="@string/description_ic_launcher"
            android:layout_margin="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/app_name"
            android:textColor="@color/title_splashscreen"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/website"
            android:textColor="@color/title_splashscreen"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_margin="25dp"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/author"
            android:textColor="@color/title_splashscreen"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="bottom" />

    </LinearLayout>


</RelativeLayout>
